# SPA_compare

./: CMakeLists.txt  ConvertToExcel.py  README.md  declaration.h  main.cpp
SPA/: ASBQ.cpp  ASBQ.h  ASPQ.cpp  ASPQ.h  AStar.cpp  AStar.h  DIK.cpp  DIK.h  DIKBQ.cpp  DIKBQ.h  DIKPQ.cpp  DIKPQ.h  Dik.cpp  Dik.h  SPAInterface.h  spa_interface.h
analyze/: CompareSP.cpp  CompareSP.h  TimeMeasure.cpp  TimeMeasure.h
dijkstra/: dijkstra.cpp  dijkstra.h
doc/: scatch.md
map/: Eller.cpp  Eller.h  Location.cpp  Location.h  Maze.cpp  Maze.h  eller.cpp  eller.h  location.cpp  location.h  maze.cpp  maze.h
rawdata/: 100 200x200_dik^dikpq^dikbq^aspq^asbq_sd0.txt  100 200x200_dik^dikpq^dikbq^aspq^asbq_sd0.xlsx  100 200x200_dik^dikpq^dikbq^aspq^asbq_sd2.txt  100 200x200_dik^dikpq^dikbq^aspq^asbq_sd2.xlsx  100 50x50_dik^dikpq^dikbq^aspq^asbq_sd0.txt  100 50x50_dik^dikpq^dikbq^aspq^asbq_sd0.xlsx  100 50x50_dik^dikpq^dikbq^aspq^asbq_sd2.txt  100 50x50_dik^dikpq^dikbq^aspq^asbq_sd2.xlsx  MakeExcel.py
rawdata/excel/: 100 200x200_dik^dikpq^dikbq^aspq^asbq_sd0.xlsx  100 200x200_dik^dikpq^dikbq^aspq^asbq_sd2.xlsx  100 50x50_dik^dikpq^dikbq^aspq^asbq_sd0.xlsx  100 50x50_dik^dikpq^dikbq^aspq^asbq_sd2.xlsx
rawdata/rawtext/: 100 200x200_dik^dikpq^dikbq^aspq^asbq_sd0.txt  100 200x200_dik^dikpq^dikbq^aspq^asbq_sd2.txt  100 50x50_dik^dikpq^dikbq^aspq^asbq_sd0.txt  100 50x50_dik^dikpq^dikbq^aspq^asbq_sd2.txt
structure/: BucketQueue.cpp  BucketQueue.h  HeapTree.cpp  HeapTree.h  PathTree.cpp  PathTree.h  PriorityQueue.cpp  PriorityQueue.h
